--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -2,10 +2,19 @@
 $bgcolor: #000;
 $txtcolor_white: #fff;
 $txtcolor_black: #000;
-$bigheadline_size: 8.8rem;
-$middleheadline_size:6.4rem;
-$smallheadline_size: 3.2rem;
-$txt_size: 1.6rem;
-$btnsize:2rem;
+$bigheadline_size: 4.583333333333333vw; 
+$middleheadline_size: 4.177545691906006vw;
+$smallheadline_size: 2.088772845953003vw;
+$txt_size: 1.0443864229765014vw;
+$btnsize:1.3054830287206267vw;
 $firstfont:lora,arial;
 $secondfont:work,arial;
+
+
+
+// CONVERTED FONTSIZES REM TO VW FOR MORE REPONSIVENESS
+// $bigheadline_size: 8.8rem;
+// $middleheadline_size:6.4rem;
+// $smallheadline_size: 3.2rem;
+// $txt_size: 1.6rem;
+// $btnsize:2rem;
