--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,6 +2,7 @@
 @import "variables";
 @import "mixin";
 @import "style";
+@import "mediaqueries";
 
 @font-face {
     font-family: lora;
@@ -63,7 +64,8 @@ main{
                 max-width: 25%;
             }
             .txtbeginning h2{
-                line-height: 7rem;
+                line-height: 3.6458333333333335vw;
+                // line-height: 7rem;
                 margin:2rem 0 ;
             }
         }
@@ -77,7 +79,8 @@ main{
                         margin-bottom: 2rem;
                     }
                     h2{
-                        line-height: 7rem;
+                        line-height: 3.6458333333333335vw;
+                        // line-height: 7rem;
                     }
                     .bearimg1{
                         position: absolute;
@@ -91,6 +94,11 @@ main{
                 }
             .contentbox{
                 position: relative;
+                .testimonial{
+                    p{ 
+                        @include testimonialstyling;
+                    }
+                }
                     .bearimg2{
                         position: absolute;
                         bottom: -11%;
@@ -130,7 +138,7 @@ main{
             .headlinebox{
                 .bearimg3{
                     position: absolute;
-                    height:auto;
+                    height:70vh;
                     width: 30vw;
                     left: 5%;
                     z-index: 2;
@@ -141,12 +149,13 @@ main{
                 .bearimg4{
                     position: absolute;
                     height:55%;
-                    bottom:0%;
+                    bottom:10%;
                     right: 0;
                     z-index: 1; 
-                    height:auto;
+                    height:70%;
                     width: 60vw;
                     max-width: unset;
+                    
                 }
             }
         }
@@ -156,6 +165,7 @@ main{
 footer{
    @include footer;
    position: relative;
+   overflow: hidden;
    .footerrow{
     @include flexrowspace;
     .rightbox img{
@@ -164,4 +174,43 @@ footer{
     }
    }
 }
+.footercontent .footerbanner {
+    width: 220vw;
+    padding: 4rem;
+    background-color: #fff;
+    transform: translate(-30%, 150%) rotate(45deg);
+    position: absolute;
+    margin-left: 35vw;
+    top: 0;
+    left: 0;
+
+  }
+  .footertxt{
+    p{
+       @include testimonialstyling; 
+    }
+  }
+  .footercontent h2 {
+    color: #000;
+    animation: footerbanner 10s linear infinite;
+  }
+  .footercontent span {
+    color: #000;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: 2px black;
+  }
+.footertxt{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+
+}
+@keyframes footerbanner {
+    0%, 100% {
+      transform: translateX(20%);
+    }
+    50% {
+      transform: translateX(-20%);
+    }
+  }
 
