--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,12 @@ p {
   line-height: 1.6666666667vw;
 }
 
+.footercontent span {
+  color: #000;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 2px black;
+}
+
 /* BTN STYLING */
 a {
   color: #fff;
@@ -140,6 +146,78 @@ a:hover {
   width: 22%;
   bottom: -25vh;
   right: 12vw;
+}
+
+/*IMG POSITION OF BEAR SECTIONS */
+.bearimg1 {
+  position: absolute;
+  left: 5%;
+  bottom: -15%;
+  height: auto;
+  width: 50vw;
+  right: 0;
+  z-index: 1;
+}
+
+.bearimg2 {
+  position: absolute;
+  bottom: -11%;
+  left: -2%;
+  z-index: 1;
+  height: auto;
+  width: 30vw;
+}
+
+.bearimg3 {
+  position: absolute;
+  height: 70vh;
+  width: 30vw;
+  left: 5%;
+  z-index: 2;
+  top: 35%;
+}
+
+.bearimg4 {
+  position: absolute;
+  height: 55%;
+  bottom: 10%;
+  right: 0;
+  z-index: 1;
+  height: 70%;
+  width: 60vw;
+  max-width: unset;
+}
+
+.circleanimation {
+  height: 25%;
+  position: absolute;
+  right: -10%;
+  top: -10%;
+  overflow: hidden;
+  animation: rotate-center 8s linear infinite both;
+}
+@keyframes rotate-center {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+.footercontent h2 {
+  color: #000;
+  animation: footerbanner 10s linear infinite;
+}
+@keyframes footerbanner {
+  0%, 100% {
+    transform: translateX(20%);
+  }
+  50% {
+    transform: translateX(-20%);
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -299,6 +377,7 @@ a:hover {
   }
   body header .herowrapper {
     padding: 0 5rem 5rem 5rem;
+    height: 90vh;
   }
   body header .herowrapper .titlewrapper .titlebox {
     max-width: 85%;
@@ -347,33 +426,32 @@ a:hover {
   body main .goldenbear .headlinebox h2, body main .poppybear .headlinebox h2 {
     font-size: 8.3550913838vw;
   }
+  body footer {
+    padding: 10rem 3rem 10rem 3rem;
+    height: 110vh;
+  }
+  body footer .footercontent {
+    height: 35vh;
+  }
+  body footer .footercontent .cta {
+    margin-bottom: 15rem;
+  }
+  body footer .footercontent .cta .join {
+    font-size: 4.1775456919vw;
+  }
+  body footer .footercontent .cta .footertxt p {
+    font-size: 6.1775456919vw;
+    line-height: 6vw;
+  }
+  body footer .footercontent .footerbanner {
+    padding: 4vw;
+    width: 469vw;
+    top: unset;
+  }
+  body footer .footercontent .footerbanner h2 {
+    font-size: 11.5vw;
+  }
 }
-body footer {
-  padding: 10rem 3rem 10rem 3rem;
-  height: 110vh;
-}
-body footer .footercontent {
-  height: 35vh;
-}
-body footer .footercontent .cta {
-  margin-bottom: 15rem;
-}
-body footer .footercontent .cta .join {
-  font-size: 4.1775456919vw;
-}
-body footer .footercontent .cta .footertxt p {
-  font-size: 6.1775456919vw;
-  line-height: 6vw;
-}
-body footer .footercontent .footerbanner {
-  padding: 4vw;
-  width: 469vw;
-  top: unset;
-}
-body footer .footercontent .footerbanner h2 {
-  font-size: 11.5vw;
-}
-
 @font-face {
   font-family: lora;
   src: url(../fonts/Lora-SemiBold.ttf);
@@ -491,15 +569,6 @@ main .goldenbear .headlinebox p, main .poppybear .headlinebox p {
 main .goldenbear .headlinebox h2, main .poppybear .headlinebox h2 {
   line-height: 3.6458333333vw;
 }
-main .goldenbear .headlinebox .bearimg1, main .poppybear .headlinebox .bearimg1 {
-  position: absolute;
-  left: 5%;
-  bottom: -15%;
-  height: auto;
-  width: 50vw;
-  right: 0;
-  z-index: 1;
-}
 main .goldenbear .contentbox, main .poppybear .contentbox {
   position: relative;
 }
@@ -509,56 +578,12 @@ main .goldenbear .contentbox .testimonial p, main .poppybear .contentbox .testim
   font-family: lora, arial;
   font-size: 2.088772846vw;
 }
-main .goldenbear .contentbox .bearimg2, main .poppybear .contentbox .bearimg2 {
-  position: absolute;
-  bottom: -11%;
-  left: -2%;
-  z-index: 1;
-  height: auto;
-  width: 30vw;
-}
 main .poppybear {
   background-color: #fff;
   color: #000;
   height: 200vh;
   position: relative;
   overflow: hidden;
-}
-main .poppybear .circleanimation {
-  height: 25%;
-  position: absolute;
-  right: -10%;
-  top: -10%;
-  overflow: hidden;
-  animation: rotate-center 8s linear infinite both;
-}
-@keyframes rotate-center {
-  0% {
-    -webkit-transform: rotate(0);
-    transform: rotate(0);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-main .poppybear .headlinebox .bearimg3 {
-  position: absolute;
-  height: 70vh;
-  width: 30vw;
-  left: 5%;
-  z-index: 2;
-  top: 35%;
-}
-main .poppybear .contentbox .bearimg4 {
-  position: absolute;
-  height: 55%;
-  bottom: 10%;
-  right: 0;
-  z-index: 1;
-  height: 70%;
-  width: 60vw;
-  max-width: unset;
 }
 
 /*FOOTER*/
@@ -591,6 +616,18 @@ footer .footerrow {
   justify-content: space-between;
   align-items: center;
 }
+footer .footerrow .leftbox .socialmediaicons {
+  margin-bottom: 1rem;
+}
+footer .footerrow .leftbox .socialmediaicons a {
+  padding: 2rem 1rem 1rem 1rem;
+}
+footer .footerrow .leftbox .socialmediaicons a img {
+  width: 2vw;
+}
+footer .footerrow .leftbox .socialmediaicons a:hover img {
+  filter: invert(1);
+}
 footer .footerrow .rightbox img {
   width: 30%;
   padding-right: 1rem;
@@ -614,30 +651,10 @@ footer .footerrow .rightbox img {
   font-size: 2.088772846vw;
 }
 
-.footercontent h2 {
-  color: #000;
-  animation: footerbanner 10s linear infinite;
-}
-
-.footercontent span {
-  color: #000;
-  -webkit-text-fill-color: transparent;
-  -webkit-text-stroke: 2px black;
-}
-
 .footertxt {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-}
-
-@keyframes footerbanner {
-  0%, 100% {
-    transform: translateX(20%);
-  }
-  50% {
-    transform: translateX(-20%);
-  }
 }
 
 /*# sourceMappingURL=style.css.map */
